<resources>
    <string name="app_name">Tire mileage</string>

    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about_program">About program</string>

    <string name="bottom_navigation_constructor">Constructor</string>
    <string name="bottom_navigation_tires">Tires</string>
    <string name="bottom_navigation_analytics">Analytics</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="toolbar_corps">Corps</string>
    <string name="toolbar_tires">Tires</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="authentication">Authentication</string>
    <string-array name="tires">
        <item>Serial number</item>
        <item>Mileage</item>
        <item>Tire chamber</item>
        <item>Tread Depth</item>
        <item>Productivity</item>
        <item>Current pressure</item>
        <item>Nominal pressure</item>
        <item>Maker Name</item>
        <item>VIN</item>
        <item>pos</item>
    </string-array>
    <string name="get_vin">Choose the VIN id</string>
    <string name="search_vin">Search</string>
    <string name="refresh_string">Refresh</string>
    <string name="no_server_response">Server no answer</string>
    <string name="settings">Settings</string>
    <string name="milliage">Milliage</string>
    <string name="tire_chamber">Tire Chamber</string>
    <string name="tread_depth">Tread Depth</string>
    <string name="productivity">Productivity</string>
    <string name="current_pressure">Current pressure</string>
    <string name="nominal_pressure">Nominal pressure</string>
    <string name="maker_name">Maker Name</string>
    <string name="vin">VIN</string>
    <string name="pos">Position</string>
    <string name="temperature">Temperature</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>