<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
>

    <TextView
            android:text="@string/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/serial_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/tire_chamber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/maker_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="@+id/textView8"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/idHolder"
            app:layout_constraintStart_toEndOf="@+id/textView16" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/serialNumberHolder"
            app:layout_constraintStart_toStartOf="@+id/idHolder" app:layout_constraintTop_toBottomOf="@+id/idHolder"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tireChamderHolder"
            app:layout_constraintStart_toStartOf="@+id/serialNumberHolder"
            app:layout_constraintTop_toBottomOf="@+id/serialNumberHolder"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/makerNameHolder"
            app:layout_constraintStart_toStartOf="@+id/idHolder"
            app:layout_constraintTop_toBottomOf="@+id/tireChamderHolder"/>
    <TextView
            android:text="@string/milliage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView16" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/current_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView15"
            app:layout_constraintStart_toEndOf="@+id/pressureHolder"
            app:layout_constraintTop_toTopOf="@+id/pressureHolder" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/nominal_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/pressureHolder"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/makerNameHolder"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/millageHolder"
            app:layout_constraintStart_toStartOf="@+id/pressureHolder"
            app:layout_constraintTop_toBottomOf="@+id/pressureHolder"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/temperatureHolder"
            app:layout_constraintTop_toBottomOf="@+id/millageHolder"
            app:layout_constraintStart_toStartOf="@+id/millageHolder"/>
    <TextView
            android:text="@string/vin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView22"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView18"
            android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/vinHolder"
            app:layout_constraintStart_toEndOf="@+id/textView22" app:layout_constraintTop_toTopOf="@+id/textView22"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView24"
            app:layout_constraintStart_toEndOf="@+id/idHolder" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/idHolder"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/positionHolder"
            app:layout_constraintStart_toEndOf="@+id/textView24" app:layout_constraintTop_toTopOf="@+id/textView24"
            android:layout_marginStart="8dp"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/textView22"/>
</androidx.constraintlayout.widget.ConstraintLayout>